--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in BIHAR.
   </footer>
   <script charset="utf-8" src="index.js"></script>
 </body> 
